Fixes https://github.com/elrido/ZeroBin/issues/82
However it of course does not look nice in cases where #82 does not appear (e.g. on the front page where there is the "Send" button right of the language menu)

--- a/css/bootstrap/zerobin.css
+++ b/css/bootstrap/zerobin.css
@@ -32,6 +32,10 @@ body.navbar-spacing {
 	cursor: default;
 }
 
+.pull-right .dropdown-menu {
+	margin-left: -56px;
+}
+
 #image img {
 	max-width: 100%;
 	height: auto;
